# SpaceInvaders

./: .gitignore  CMakeLists.txt  README.md
include/: Bullets.hpp  Clock.hpp  Color.hpp  Enemy.hpp  Entity.hpp  Enum.hpp  EnumWrapper.hpp  Explosion.hpp  Game.hpp  GameContext.hpp  Input.hpp  MysteryShip.hpp  Player.hpp  Render.hpp  ResourcePath.hpp  Sandbag.hpp  SoundPlayer.hpp  State.hpp  StateClear.hpp  StateGame.hpp  StateGameOver.hpp  StateManager.hpp  StateStart.hpp
libs/Math/: CMakeLists.txt
libs/Math/include/: MathConcepts.hpp  MathHelper.hpp  MyTypes.hpp  Rand.hpp  Shape.hpp  Vector.hpp
libs/Math/src/: Rand.cpp
libs/Math/tests/: VectorTest.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
resources/: icon.icns
src/: Bullets.cpp  Clock.cpp  Color.cpp  Enemy.cpp  Explosion.cpp  Game.cpp  GameContext.cpp  GameInternal.cpp  Input.cpp  MysteryShip.cpp  Player.cpp  Render.cpp  RenderOpenGL.cpp  ResourcePath.mm  Sandbag.cpp  SoundPlayer.cpp  StateClear.cpp  StateGame.cpp  StateGameOver.cpp  StateManager.cpp  StateStart.cpp  main.cpp
